I2PSnark: remove dead code, add missing serialVersionUIDs, and modernize MagnetHandler URI building